# terminal-screensaver

./: .bashrc  .gitignore  AGENTS.md  CLI_TESTING_LIBRARY_ENHANCEMENT.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING_AND_TESTING_IMPROVEMENTS.md  LICENSE  LICENSE-APACHE  PR_DESCRIPTION.md  README.md  demo-config.toml  demo-scripts.sh  security-audit-report.json  terminal-screensaver.toml  test-ascii-config.toml  welcome-examples.toml
.claude/skills/cli-test-builder/: skill.md
.claude/skills/dependency-minimizer/: skill.md
.claude/skills/extensibility-designer/: skill.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cicd.yml
docs/: architecture.md  backend.md  cicd.md  cli.md  configuration.md  controls.md  documentation.md  features.md  frontend.md  quick-start.md  roadmap.md  security.md  testing.md
scripts/: local-cd.sh  local-ci.sh
scripts/cicd/: local-cd.sh  local-ci.sh
scripts/demo/: dev-status.sh  git-quick.sh  help.sh
src/: error.rs  lib.rs  main.rs
src/cli/: cli_logic.rs  mod.rs
src/feature_alpha/: feature_alpha_logic.rs  feature_alpha_logic_tests.rs  mod.rs
src/features/: mod.rs
src/logger/: logger_logic.rs  logger_macros.rs  mod.rs
src/services/: mod.rs  welcome_message.rs
src/shared/: mod.rs  shared_logic.rs  simple_renderer.rs  simple_renderer_tests.rs
src/styles/: mod.rs  style_logic.rs
tests/integration/: config_tests.rs  error_handling_tests.rs  feature_tests.rs  logger_tests.rs  shared_logic_tests.rs
(+22 files in other folders)
